# steam-game-analyzer

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  PLAN.md  README.md  REFERENCES.md
steam-analyzer/: README.md  pyproject.toml
steam-analyzer/src/steam_analyzer/: db_queries.py  error_logger.py  server.py
steam-analyzer/src/steam_analyzer/stats/: review_stats.py
steam-analyzer/src/steam_analyzer/tools/: analysis_logs.py  analyze_design.py  search_reviews.py
steam-analyzer/tests/: conftest.py  test_analyze_design.py  test_db_queries.py  test_error_logger.py  test_review_stats.py  test_search_reviews.py
steam-crawler/: pyproject.toml
steam-crawler/src/steam_crawler/: cli.py  skill_error_logger.py
steam-crawler/src/steam_crawler/api/: base.py  cheapshark.py  hltb.py  igdb.py  matching.py  opencritic.py  pcgamingwiki.py  protondb.py  rate_limiter.py  rawg.py  resilience.py  steam_reviews.py  steam_store.py  steamspy.py  twitch.py  wikidata.py
steam-crawler/src/steam_crawler/db/: changelog.py  repository.py  schema.py
steam-crawler/src/steam_crawler/models/: game.py  (+1 more)
steam-crawler/tests/: conftest.py  test_changelog.py  test_cheapshark.py  test_cli.py  test_hltb.py  test_igdb.py  test_matching.py  test_models.py  test_opencritic.py  test_pcgamingwiki.py  test_pipeline.py  test_protondb.py  test_rate_limiter.py  test_rawg.py  test_repository.py  test_resilience.py  test_runner.py  test_schema.py  test_skill_error_logger.py  test_steam_reviews.py  test_steamspy.py  test_step1d.py  test_step1e.py  test_step3_preflight.py  test_twitch.py  test_wikidata.py
(+67 files in other folders)
