[project]
name = "steam-analyzer"
version = "0.1.0"
description = "Steam game review analyzer — local MCP server"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
