[project]
name = "steam-crawler"
version = "0.1.0"
description = "Steam game data crawler using SteamSpy + Steam Reviews API"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[project.scripts]
steam-crawler = "steam_crawler.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
